--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#acheivements">Acheivements</a>
           </li>
+          <li class="nav-item">
+            Last Updated on 20 May 2018 
+          </li>
         </ul>
       </div>
 
-      <div class="subheading mb-5" align="right">Last Updated on 20 May 2018 </div>
+  
     </nav>
 
     <div class="container-fluid p-0">
